# zaer_hr_backend

./: .gitignore  Dockerfile  README.md  build_docker_image.sh  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_4f25d1428172_setup_hr_initial_tables.py  0002_b955c27a10b3_change_current_job_to_designation.py  0003_48e844fd72c3_add_unit_table.py  0004_38b4e3ee8414_unique_together_constraints.py  0005_f51f411a1f4a_drop_badge_number_and_termination_date.py  0006_91341154b6f6_create_autoincrementing_badge_number.py  0007_7d515c4e56aa_add_level_order_column_to_educational_.py  0008_a52ad50c16c2_add_is_terminated_column_to_employee_.py  0009_2c0a952728b9_create_termination_table.py  0010_c55a7903e841_add_country_table.py  0011_eaf5624377ff_swap_unit_and_section_tables.py  0012_63b433c7a929_add_columns_to_employee_table.py  0013_f242f65228ab_add_stree_and_house_number_to_address_.py  38b4e3ee8414_unique_together_constraints.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/assets/: __init__.py
app/core/: __init__.py  db.py  settings.py
app/models/: __init__.py
app/models/employee_info/: __init__.py  address.py  child.py  contact_person.py  country.py  educational_level.py  employee.py  nationalities.py  termination.py
app/models/health/: __init__.py  health_check.py
app/models/organization_units/: __init__.py  current_job.py  department.py  designation.py  division.py  section.py  (+2 more)
app/reports/: __init__.py  severance_pay.py
app/tests/: __init__.py  conftest.py
app/utils/: __init__.py  lower_case_attrs.py
(+61 files in other folders)
